# tmux-history-finder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  history_finder.sh  tmux_history_finder.tmux  tmux_nexus.tmux  tnx
.github/workflows/: release.yml  shellcheck.yml
scripts/: action.sh  capture.sh  install-binary.sh  manage.sh  motion-run.sh  motion-s.sh  motion-s2-second.sh  motion-s2-submit.sh  motion-s2.sh  preview.sh  search.sh  utils.sh
src/: action.rs  capture.rs  cli.rs  config.rs  fzf.rs  index.rs  main.rs  manage.rs  motion.rs  preview.rs  search.rs  tmux.rs  types.rs  util.rs
src/manage/: clipboard.rs  process.rs  workspace.rs
src/motion/: capture.rs  hints.rs  matching.rs  navigation.rs  rendering.rs  terminal.rs  tests.rs
tests/: install-binary.sh  launcher.sh  manage-integration.sh  shell-quoting.sh  tmux-integration.sh
