[package]
name = "tmux-history-finder"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Fast tmux pane history search with a Rust backend and fzf UI"

[[bin]]
name = "thf"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
tempfile = "3"
which = "8"
