[package]
name = "tmux-nexus"
version = "0.7.1"
edition = "2021"
license = "MIT"
description = "Unified tmux search, motion, and workspace management"

[[bin]]
name = "tnx"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
tempfile = "3"
unicode-segmentation = "1"
unicode-width = "0.2"
which = "8"
